--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,9 +1,3 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HOME</title>
-  </head>
-  <body></body>
-</html>
+<%-include('header.ejs')%>
+    안녕하세요
+<%-include('footer.ejs')%>
